<resources>
    <string name="app_name">FreshKutz</string>
    <string name="logo_string">Get Your Ideal Haircut, '\n Again and Again</string>
    <string name="hair_cut_date">Date of Haircut</string>
    <string name="salon_city">Salon + City</string>
    <string name="cancel">Cancel</string>
    <string name="stageTV">Create Haircut</string>
    <!--<string name="stageTV">Create Haircut | 1 of 2</string>-->
    <string name="ask_stylist">Ask your STYLIST nicely to fill this page out</string>
    <string name="style_name_hint">Hair Style Name</string>
    <string name="headshots_hint">Take Headshots</string>
    <string name="front_facing">Front</string>
    <string name="side_facing">Side</string>
    <string name="back_facing">Back</string>
    <string name="save_n_continue">Continue</string>
    <string name="save_n_proceed">Proceed</string>
    <string name="final_stageTV">Preview Haircut | 2 of 2</string>
    <string name="select_cover_image">Select One of Your Images as Cover Image</string>
    <string name="caption_style_hint">Type here...</string>
    <string name="desc_style_hint">Enter Style Description</string>
    <string name="date_hint">Choose Date</string>
    <string name="salon_name_hint">Enter Only Salon Name</string>
    <string name="date_haircut_hint">Date of Haircut</string>
    <string name="salon_name_tv">Salon Name</string>
    <string name="full_details_txt">Full Details Mode</string>
    <string name="edit_details_txt">Edit</string>
    <string name="details_style_name">Name of Haircut</string>
    <string name="details_headshots">Headshots</string>
    <string name="details_style_desc">Haircut Description</string>
    <string name="details_stylist_name">Hair Stylist\'s Name</string>
    <string name="details_style_date">Date of Haircut</string>
    <string name="details_salon_city">Salon Name</string>
    <string name="edit_txt">Edit Mode</string>
    <string name="cancel_edit_txt">Cancel</string>
    <string name="test_banner_ad_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="app_banner_ad_id">ca-app-pub-6032968670949504/2635775626</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="done">DONE</string>
    <string name="slide_1_title">Are You a Hair Freak?</string>
    <string name="slide_1_desc">An App to Save Your Trendiness, For Your Next Salon Visit? Click Next</string>
    <string name="slide_2_title">Do You Want Consistency in Appearance?</string>
    <string name="slide_2_desc">Upload Photos of Your New Haircut and Save \'Em...Easy!!</string>
    <string name="slide_3_title">Boost Self-Satisfaction</string>
    <string name="slide_3_desc">Boost Your Confidence Levels. A Good Hair Style Scores You More Than a Date.</string>
</resources>
