<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.jjoey.freshkutz.FullDetailsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/checkImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/check"
                android:padding="15dp"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_txt"
                android:textColor="@android:color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:layout_centerHorizontal="true"
                android:padding="15dp"/>

            <TextView
                android:id="@+id/cancelTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_edit_txt"
                android:textColor="@android:color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:padding="15dp" />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_below="@id/toolbar"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                app:cardElevation="10dp"
                app:cardCornerRadius="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/toolbar"
                    android:orientation="vertical"
                    android:layout_margin="13dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/details_style_name"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"/>

                    <EditText
                        android:id="@+id/edit_style_titleET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="50dp"
                        android:textColor="@color/gray"
                        tools:text="asssss"
                        android:textSize="16sp"
                        android:inputType="text"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:maxLines="1"
                        android:maxLength="60"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/details_headshots"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:layout_marginTop="15dp"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:layout_marginTop="10dp">

                        <RelativeLayout
                            android:id="@+id/frontLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:id="@+id/edit_frontIV"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:background="@drawable/border_image_bkg"
                                android:src="@drawable/ic_hair_tools"
                                android:scaleType="centerCrop"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/front_facing"
                                android:textColor="#c2c2c2"
                                android:textSize="18sp"
                                android:layout_below="@+id/edit_frontIV"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="5dp"/>

                        </RelativeLayout>

                        <RelativeLayout
                            android:id="@+id/sideLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/frontLayout"
                            android:layout_marginLeft="16dp">

                            <ImageView
                                android:id="@+id/edit_sideIV"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:background="@drawable/border_image_bkg"
                                android:src="@drawable/ic_hair_tools"
                                android:scaleType="centerCrop"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/side_facing"
                                android:textColor="#c2c2c2"
                                android:textSize="18sp"
                                android:layout_below="@+id/edit_sideIV"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="5dp"/>

                        </RelativeLayout>

                        <RelativeLayout
                            android:id="@+id/backLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@id/sideLayout"
                            android:layout_marginLeft="16dp">

                            <ImageView
                                android:id="@+id/edit_backIV"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:background="@drawable/border_image_bkg"
                                android:src="@drawable/ic_hair_tools"
                                android:scaleType="centerCrop"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/back_facing"
                                android:textColor="#c2c2c2"
                                android:textSize="18sp"
                                android:layout_below="@+id/edit_backIV"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="5dp"/>

                        </RelativeLayout>

                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/details_style_desc"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:layout_marginTop="15dp" />

                    <EditText
                        android:id="@+id/edit_style_descET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="50dp"
                        android:textColor="@color/gray"
                        android:textSize="16sp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:inputType="textShortMessage|text|text|textMultiLine" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/details_stylist_name"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"
                        android:layout_marginTop="8dp"
                        android:textStyle="bold"/>

                    <EditText
                        android:id="@+id/edit_stylist_nameET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="50dp"
                        android:textColor="@color/gray"
                        android:textSize="16sp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:inputType="textShortMessage|text|text|textMultiLine" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/details_salon_city"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"/>

                    <EditText
                        android:id="@+id/edit_style_salonET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="50dp"
                        android:textColor="@color/gray"
                        android:textSize="16sp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:inputType="text"
                        android:maxLines="1"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
