<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c2c2c2"
    tools:context="com.jjoey.freshkutz.AddStyleActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/cancelTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:padding="10dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:padding="10dp"
                android:text="@string/final_stageTV"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

            <ImageView
                android:id="@+id/checkIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/infoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_margin="15dp"
        android:background="@drawable/orange_bkg"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:src="@drawable/pic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/select_cover_image"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>


    <android.support.v7.widget.CardView
        android:id="@+id/metaCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/infoLayout"
        android:background="@android:color/white"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:weightSum="3">

            <RadioGroup
                android:id="@+id/coverGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioFrontImg"
                    android:layout_width="120dp"
                    android:minWidth="100dp"
                    android:layout_height="120dp"
                    android:minHeight="100dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"/>

                <RadioButton
                    android:id="@+id/radioSideImg"
                    android:layout_width="120dp"
                    android:minWidth="100dp"
                    android:layout_height="120dp"
                    android:minHeight="100dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"/>

                <RadioButton
                    android:id="@+id/radioBackImg"
                    android:layout_width="120dp"
                    android:minWidth="100dp"
                    android:layout_height="120dp"
                    android:minHeight="100dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="3dp"/>

            </RadioGroup>


        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/proceedFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:src="@drawable/check"
        app:backgroundTint="@color/colorPrimary"
        app:fabSize="normal" />

</RelativeLayout>
